// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Dockerfile enableOtel rendering > renders opentelemetry-instrument CMD when enableOtel is true > Dockerfile-enableOtel-true 1`] = `
"FROM public.ecr.aws/docker/library/python:3.12-slim-trixie

RUN pip install --no-cache-dir uv

ARG UV_DEFAULT_INDEX
ARG UV_INDEX

WORKDIR /app

ENV UV_SYSTEM_PYTHON=1 \\
    UV_COMPILE_BYTECODE=1 \\
    UV_NO_PROGRESS=1 \\
    PYTHONUNBUFFERED=1 \\
    DOCKER_CONTAINER=1 \\
    UV_DEFAULT_INDEX=\${UV_DEFAULT_INDEX} \\
    UV_INDEX=\${UV_INDEX} \\
    PATH="/app/.venv/bin:$PATH"

RUN useradd -m -u 1000 bedrock_agentcore

COPY pyproject.toml uv.lock ./
RUN uv sync --frozen --no-dev --no-install-project

COPY --chown=bedrock_agentcore:bedrock_agentcore . .
RUN uv sync --frozen --no-dev

USER bedrock_agentcore

# AgentCore Runtime service contract ports
# https://docs.aws.amazon.com/bedrock-agentcore/latest/devguide/runtime-service-contract.html
# 8080: HTTP Mode
# 8000: MCP Mode
# 9000: A2A Mode
EXPOSE 8080 8000 9000

CMD ["opentelemetry-instrument", "python", "-m", "main"]
"
`;

exports[`Dockerfile enableOtel rendering > renders plain python CMD when enableOtel is false > Dockerfile-enableOtel-false 1`] = `
"FROM public.ecr.aws/docker/library/python:3.12-slim-trixie

RUN pip install --no-cache-dir uv

ARG UV_DEFAULT_INDEX
ARG UV_INDEX

WORKDIR /app

ENV UV_SYSTEM_PYTHON=1 \\
    UV_COMPILE_BYTECODE=1 \\
    UV_NO_PROGRESS=1 \\
    PYTHONUNBUFFERED=1 \\
    DOCKER_CONTAINER=1 \\
    UV_DEFAULT_INDEX=\${UV_DEFAULT_INDEX} \\
    UV_INDEX=\${UV_INDEX} \\
    PATH="/app/.venv/bin:$PATH"

RUN useradd -m -u 1000 bedrock_agentcore

COPY pyproject.toml uv.lock ./
RUN uv sync --frozen --no-dev --no-install-project

COPY --chown=bedrock_agentcore:bedrock_agentcore . .
RUN uv sync --frozen --no-dev

USER bedrock_agentcore

# AgentCore Runtime service contract ports
# https://docs.aws.amazon.com/bedrock-agentcore/latest/devguide/runtime-service-contract.html
# 8080: HTTP Mode
# 8000: MCP Mode
# 9000: A2A Mode
EXPOSE 8080 8000 9000

CMD ["python", "-m", "main"]
"
`;

exports[`Java Dockerfile rendering > uses pinned Maven and Corretto stages without network-fetched tooling > Dockerfile-java 1`] = `
"FROM public.ecr.aws/docker/library/maven:3.9-amazoncorretto-21 AS build
WORKDIR /build
COPY pom.xml .
COPY src ./src
RUN mvn -q -DskipTests package

FROM public.ecr.aws/amazoncorretto/amazoncorretto:21
WORKDIR /app
RUN yum install -y shadow-utils && useradd -m -u 1000 bedrock_agentcore && yum clean all
COPY --from=build --chown=bedrock_agentcore:bedrock_agentcore /build/target/*.jar /app/app.jar
ENV PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD=1
USER bedrock_agentcore
EXPOSE 8080
CMD ["java", "-jar", "/app/app.jar"]
"
`;
